# MiciMike-standalone-AI-firmware

./: .gitignore  CMakeLists.txt  README.md  THIRD_PARTY_NOTICES.md  partitions.csv  sdkconfig  sdkconfig.defaults
components/sendspin/: CMakeLists.txt  PATCHES.md  idf_component.yml  sendspin_iface.cpp
components/sendspin/include/: sendspin_iface.h
components/snapclient/: CMakeLists.txt  snap_proto.c  snap_proto.h  snapclient.c
components/snapclient/include/: snapclient.h
licenses/: BSD-3-Clause-KissFFT.txt
main/: CMakeLists.txt  aic3204.c  aic3204.h  alexa_model.h  app_config.h  audio_resample.c  audio_resample.h  hey_jarvis_model.h  hey_mycroft_model.h  i2s_hal.c  i2s_hal.h  idf_component.yml  led_control.c  led_control.h  main.c  media_radio.c  media_radio.h  micro_wake_word.cpp  micro_wake_word.h  nvs_config.c  nvs_config.h  okay_nabu_model.h  settings_server.c  settings_server.h  stop_model.h  touch_input.c  touch_input.h  wifi_provision.c  wifi_provision.h  ws_client.c  ws_client.h  xmos_voice_kit.c  xmos_voice_kit.h
main/microfrontend/: fft.c  fft_util.c  filterbank_util.c  log_lut.c  window_util.c
