idf_component_register(
    SRCS
        "main.c"
        "i2s_hal.c"
        "aic3204.c"
        "ws_client.c"
        "wifi_provision.c"
        "settings_server.c"
        "media_radio.c"
        "led_control.c"
        "touch_input.c"
        "nvs_config.c"
        "audio_resample.c"
        "xmos_voice_kit.c"
        "micro_wake_word.cpp"
        "microfrontend/filterbank.c"
        "microfrontend/filterbank_util.c"
        "microfrontend/frontend.c"
        "microfrontend/frontend_util.c"
        "microfrontend/log_scale.c"
        "microfrontend/log_scale_util.c"
        "microfrontend/log_lut.c"
        "microfrontend/noise_reduction.c"
        "microfrontend/noise_reduction_util.c"
        "microfrontend/pcan_gain_control.c"
        "microfrontend/pcan_gain_control_util.c"
        "microfrontend/window.c"
        "microfrontend/window_util.c"
        "microfrontend/fft.c"
        "microfrontend/fft_util.c"
        "microfrontend/kiss_fft.c"
    INCLUDE_DIRS "." "microfrontend"
    REQUIRES
        driver
        esp_driver_i2s
        esp_driver_gpio
        esp_driver_i2c
        esp_driver_touch_sens
        esp_wifi
        esp_http_server
        esp_http_client
        espressif__esp_websocket_client
        espressif__esp_audio_codec
        nvs_flash
        esp_netif
        espressif__led_strip
        mbedtls
        esp_timer
        esp_event
        espressif__cjson
        espressif__esp-tflite-micro
)
